<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/view_expiration_date_hint_padding"
        android:text="@string/expiration_time_hint"
        android:textAlignment="center"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/days_label"
        android:layout_width="@dimen/view_expiration_label_width"
        android:layout_height="wrap_content"
        android:text="@string/days"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/hours_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hint" />

    <TextView
        android:id="@+id/hours_label"
        android:layout_width="@dimen/view_expiration_label_width"
        android:layout_height="wrap_content"
        android:text="@string/hours"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/minutes_label"
        app:layout_constraintStart_toEndOf="@+id/days_label"
        app:layout_constraintTop_toBottomOf="@+id/hint" />

    <TextView
        android:id="@+id/minutes_label"
        android:layout_width="@dimen/view_expiration_label_width"
        android:layout_height="wrap_content"
        android:text="@string/minutes"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/hours_label"
        app:layout_constraintTop_toBottomOf="@+id/hint" />

    <EditText
        android:id="@+id/days"
        android:layout_width="@dimen/view_expiration_input_width"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/days_label"
        app:layout_constraintStart_toStartOf="@+id/days_label"
        app:layout_constraintTop_toBottomOf="@+id/days_label" />

    <EditText
        android:id="@+id/hours"
        android:layout_width="@dimen/view_expiration_input_width"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/hours_label"
        app:layout_constraintStart_toStartOf="@+id/hours_label"
        app:layout_constraintTop_toBottomOf="@+id/hours_label" />

    <EditText
        android:id="@+id/minutes"
        android:layout_width="@dimen/view_expiration_input_width"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/minutes_label"
        app:layout_constraintStart_toStartOf="@+id/minutes_label"
        app:layout_constraintTop_toBottomOf="@+id/minutes_label" />

</androidx.constraintlayout.widget.ConstraintLayout>